# ha-hyxi-cloud-test

./: .gitignore  .pre-commit-config.yaml  CHANGES.md  CLAUDE.md  CLAUDE.original.md  README.md  fix_yaml.py  hacs.json  mypy.ini  plan_review_request.txt  pyproject.toml  requirements.txt  requirements_test.txt
.github/: CODEOWNERS  labeler.yml
.github/workflows/: codeql.yml  ha-preview.yml  pre-commit.yml  process-pr.yml  receive-pr.yml  release-drafter.yml  release-publisher.yml  scorecards.yml  security.yml  stale.yml  sync-manifest.yml  tests.yml  validate.yml
.jules/: bolt.md
custom_components/hyxi_cloud/: __init__.py  binary_sensor.py  button.py  config_flow.py  const.py  coordinator.py  engine.py  manifest.json  number.py  protection.py  select.py  sensor.py  strings.json  switch.py  webhook.py
custom_components/hyxi_cloud/translations/: af.json  cs.json  da.json  de.json  en.json  es.json  fi.json  fr.json  hu.json  it.json  ja.json  nb.json  nl.json  pl.json  pt-BR.json  pt.json  ru.json  sv.json  tr.json  zh-Hans.json
custom_components/hyxi_cloud_dev/: __init__.py  binary_sensor.py  button.py  config_flow.py  const.py  coordinator.py  engine.py  entity.py  manifest.json  number.py  protection.py  select.py  sensor.py  services.yaml  strings.json  switch.py  webhook.py
dev_env/: manage.sh
docs/: hyxi-api-doc.json
scripts/: check_versions.py  sync_translations.py
tests/: benchmark_device_info.py  conftest.py  test_alarm_push.py  test_api_control.py  test_binary_sensor.py  test_button.py  test_config_flow.py  test_const.py  test_coordinator.py  test_energy_manager_entities.py  test_engine.py  test_entity.py  test_fuzz.py  test_init.py  test_micro_inverter.py  test_number.py  test_parsers.py  test_protection.py  test_push_integration.py  test_select.py  test_sensor_logic.py  test_services.py  test_switch.py  test_translations.py  test_vpp.py  test_webhook.py
tests/integration/: conftest.py  test_integration.py  test_real_engine.py
(+22 files in other folders)
