[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "ha-hyxi-cloud"
version = "1.4.2"
description = "HYXI ⚡️🔋☀️ Integration for HomeAssistant using HYXI Cloud ☁️"
readme = "README.md"
authors = [
    { name = "Veldkornet" }
]
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.13.5",
    "hyxi-cloud-api>=1.2.4"
]

[tool.ruff]
target-version = "py314"
line-length = 88

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "UP", "B", "S", "N", "PTH", "RUF"
]
ignore = ["E501", "N818", "S105", "N999"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106", "N802", "E402"]
"custom_components/hyxi_cloud/__init__.py" = ["N812"]

[tool.mypy]
python_version = "3.14"
show_error_codes = true
incremental = true
ignore_missing_imports = true
check_untyped_defs = true
# Definitive search path and package lock
mypy_path = "custom_components:."
# Exclude development environments to avoid duplicate module discovery
exclude = ["dev_env/"]
# Namespace handling
namespace_packages = false
explicit_package_bases = false

[tool.setuptools.packages.find]
include = ["custom_components*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--ignore=tests/integration"

[tool.pylint.similarities]
min-similarity-lines = 100

[tool.pylint.messages_control]
disable = [
    "line-too-long",
    "import-error",
    "too-few-public-methods",
    "too-many-instance-attributes",
    "too-many-branches",
    "too-many-return-statements",
    "too-many-nested-blocks",
    "too-many-locals",
    "missing-class-docstring",
    "missing-function-docstring",
    "try-except-raise",
    "redefined-outer-name",
    "protected-access",
    "unused-argument",
    "reimported",
    "duplicate-code",
    "import-outside-toplevel",
    "wrong-import-order",
]
